objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control functionality of AvaTax for QuoteQuickly.</description>
    <fields>
        <fullName>AVA_SFCPQ__A_AccountNumber__c</fullName>
        <description>Account Number used to connect to AvaTax API.</description>
        <inlineHelpText>Account Number used to connect to AvaTax API.</inlineHelpText>
        <label>Account Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__B_LicenseKey__c</fullName>
        <description>License key used to connect to AvaTax API.</description>
        <inlineHelpText>License key used to connect to AvaTax API.</inlineHelpText>
        <label>License Key</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__C_Sandbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The default account type is Production. This selection changes the account type from Production to Sandbox.</description>
        <inlineHelpText>The default account type is Production. This selection changes the account type from Production to Sandbox.</inlineHelpText>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__D_CompanyCode__c</fullName>
        <description>All transactions will be posted to this company in AvaTax</description>
        <inlineHelpText>All transactions will be posted to this company in AvaTax</inlineHelpText>
        <label>Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Disable_AvaTax_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select checkbox to temporarily disable all triggers for  processes that you do not want to execute all AvaTax For Salesforce CPQ triggers. Remember to re-enable triggers after this process so that the application can perform as expected.</inlineHelpText>
        <label>Disable AvaTax Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__E_Street__c</fullName>
        <description>Street portion of corporate address.</description>
        <inlineHelpText>Street portion of corporate address.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Enable_AvaTax_Exemptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable AvaTax Exemptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__F_City__c</fullName>
        <description>City portion of corporate address.</description>
        <inlineHelpText>City portion of corporate address.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__G_State__c</fullName>
        <description>State portion of corporate address.</description>
        <inlineHelpText>State portion of corporate address.</inlineHelpText>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__H_PostalCode__c</fullName>
        <description>Postal Code portion of corporate address.</description>
        <inlineHelpText>Postal Code portion of corporate address.</inlineHelpText>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__I_Country__c</fullName>
        <description>Country portion of corporate address.</description>
        <inlineHelpText>Country portion of corporate address.</inlineHelpText>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__JA_SaveTransactionsToAvaTax__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, Order transactions will be posted to AvaTax admin console (AvaTax Update).</description>
        <inlineHelpText>If checked, Order transactions will be posted to AvaTax Update</inlineHelpText>
        <label>Save transactions to AvaTax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__J_EnableTaxCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable/disable Avalara Tax Calculation</description>
        <inlineHelpText>To enable the AvaTax tax service</inlineHelpText>
        <label>Enable Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__K_EnableAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable AvaTax Address Validation</description>
        <inlineHelpText>To enable the AvaTax Address Validation Service. Address Validation service is available for US and Canada only</inlineHelpText>
        <label>Validate Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__L_Note__c</fullName>
        <defaultValue>$Label.ava_sfcpq__avalara_note</defaultValue>
        <description>Provide details to visit AvaTax tab to test the connection</description>
        <inlineHelpText>Please visit AvaTax tab to test connection</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Street_3__c</fullName>
        <label>Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AvaTax Salesforce Integration Setting</label>
</CustomObject>